syntax = "proto3";

package proto.zion.v1;

option go_package = "github.com/getzion/relay/gen/zion/v1";

import "proto/protoc-gen-gorm/options/gorm.proto";

service MessagesService {
  // Boost a message
  rpc BoostMessage(BoostMessageRequest) returns (BoostMessageResponse) {}
  // Delete a message I sent, or hide it if it was sent to me
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {
    option (gorm.method).object_type = "Message";
  }
  // Get messages that meet various filters
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse) {}
  // Send message
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

message Message {
  option (gorm.opts).ormable = true;
  // Message primary ID & key
  int64 id = 1 [(gorm.field).tag = {
    unique: true
    primary_key: true
  }];
  // Primary id of user who sent this message
  int64 user_id = 2; // Required
  // Primary id of user recipient of this message (if DM)
  int64 receiving_user_id = 3; // Optional if conversation_id is non-null, otherwise required
  // Primary id of conversation of this message (if community/conversation message)
  int64 conversation_id = 4; // Optional if receiving_user_id is non-null, otherwise required
  // Main message body
  string text = 5; // Optional if link is non-null, otherwise required
  // URL link to external piece of content
  string link = 6; // Optional if text is non-null, otherwise required
  // URL for associated image
  string image = 7;
}

message BoostMessageRequest {}
message BoostMessageResponse {}
message DeleteMessageRequest {
  int64 id = 1;
}
message DeleteMessageResponse {}
message GetMessagesRequest {}
message GetMessagesResponse {}
message SendMessageRequest {}
message SendMessageResponse {}
